RESOLVED FIXED167449
Remote Inspector: Listing should be updated when a target gains or loses a debugger session
https://bugs.webkit.org/show_bug.cgi?id=167449
Summary Remote Inspector: Listing should be updated when a target gains or loses a de...
Joseph Pecoraro
Reported 2017-01-25 21:58:03 PST
Summary: Listing should be updated when a target gains or loses a debugger session This controls whether or not we prevent device idle behavior or not. So we should update the listing whenever a debugger session starts or ends. Steps to Reproduce: 1. Remotely inspect a page in iOS Safari 2. Wait 2 minutes => device falls asleep, expected it to stay awake. Notes: Debuggers will want to track this state so different debuggers don't try to debug a target already being debugged.
Attachments
[PATCH] Proposed Fix (4.83 KB, patch)
2017-01-25 22:08 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2017-01-25 22:08:02 PST
Created attachment 299793 [details] [PATCH] Proposed Fix
Radar WebKit Bug Importer
Comment 2 2017-01-25 22:22:14 PST
Matt Baker
Comment 3 2017-01-27 16:54:50 PST
Comment on attachment 299793 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=299793&action=review > Source/JavaScriptCore/inspector/remote/RemoteInspector.mm:622 > + auto target = m_targetMap.get(targetIdentifier); I think we're preferring the more explicit auto* and auto& for pointer and reference types (per recent discussions with Darin).
Blaze Burg
Comment 4 2017-01-28 14:07:11 PST
Comment on attachment 299793 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=299793&action=review r=me > Source/JavaScriptCore/inspector/remote/RemoteInspector.mm:619 > + This means caller must hold the listings lock before calling these, right?
Joseph Pecoraro
Comment 5 2017-01-28 16:16:04 PST
Comment on attachment 299793 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=299793&action=review >> Source/JavaScriptCore/inspector/remote/RemoteInspector.mm:619 >> + > > This means caller must hold the listings lock before calling these, right? Yes
WebKit Commit Bot
Comment 6 2017-01-28 16:41:06 PST
Comment on attachment 299793 [details] [PATCH] Proposed Fix Clearing flags on attachment: 299793 Committed r211344: <http://trac.webkit.org/changeset/211344>
WebKit Commit Bot
Comment 7 2017-01-28 16:41:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.