Remote Inspector: Listing should be updated when a target gains or loses a debugger session https://bugs.webkit.org/show_bug.cgi?id=167449

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-01-28
Reviewed by Brian Burg.

* inspector/remote/RemoteInspector.h:
* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::setupFailed):
(Inspector::RemoteInspector::updateTargetListing):
(Inspector::RemoteInspector::receivedSetupMessage):
(Inspector::RemoteInspector::receivedDidCloseMessage):
(Inspector::RemoteInspector::receivedConnectionDiedMessage):
Whenever we add/remove a connection we should update the listing properties
for that target that corresponded to that connection. In this way group
updating active sessions, the target, and pushing listing together.

Canonical link: https://commits.webkit.org/184588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211344 268f45cc-cd09-0410-ab3c-d52691b4dbfc